mobile spacing correction

--- a/Sandbox/portfolio/BlooBook/css/workshop.scss
+++ b/Sandbox/portfolio/BlooBook/css/workshop.scss
@@ -196,6 +196,7 @@ main {
 
     input{
         width: 80%;
+        margin-left: 4px;
     }
 
     input, button{
@@ -207,6 +208,9 @@ main {
     button{
         min-width: 10vw;
         height: 40px;
+    }
+    #createButton{
+        margin-right: 25px;
     }
 }
 
